# nolli

./: .gitignore  BUGS  CMakeLists.txt  README.md  alloc.c  alloc.h  analyze.c  analyze.h  ast.c  ast.h  ast_graph.c  ast_graph.h  binexpr.nl  debug.h  error.h  gen.c  generics.nl  goal.nl  grammar.ebnf  grammar.y  graph.c  graph.h  handwritten_lexer.c  init.c  js.nl  lexer.c  lexer.h  lexer.l  main.c  math.nl  nolli.c  nolli.h  notes.md  os.c  os.h  parse_errors.nl  parser.c  parser.h  parser.y  sample.nl  (+16 more)
doc/: CMakeLists.txt  Doxyfile.in  builtins.md  definition.md
doc/semantic_analysis/: checklist.md  example.md  example_demo.nl  example_shapes.nl
etc/vim/ftdetect/: nolli.vim
etc/vim/ftplugin/: nolli.vim
etc/vim/indent/: nolli.vim
etc/vim/syntax/: nolli.vim
ext/: UseLemon.cmake
grammar/: .gitignore  Makefile  experimental.nl  grammar.ebnf  grammar.y  lexspec.l
handwritten/: goal.nl  lexer.c  lexer.h  parser.c  sample.nl  test_lexer.code
handwritten/test/: funcs.nl  if+else.nl  test_parser.py  typedef.nl  whileloop.nl
tests/: alias.nl  astdump.dot  binexpr.nl  eof.nl  errors-parse.nl  funcs.nl  if+else.nl  lexer.nl  members.nl  strings.nl  utf8.nl  whileloop.nl
